workshop/level-5-sre/deploy/routes.yaml
# --- Route for Backend API ---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jedy-back-route # Name of the route
  namespace: starwars
spec:
  parentRefs:
  - name: infra-gateway # Attaches this route to our 'infra-gateway'
    namespace: gateways # Specifies that the Gateway is in the 'gateways' namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api # Intercepts all traffic starting with /api
    filters:
    - type: URLRewrite # Rewrites the URL path
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: / # Replaces /api with / before sending to the backend (e.g. /api/users -> /users)
    backendRefs:
    - name: back-cluster-ip-service # Redirects to the Backend Service
      port: 4000
---
# --- Route for Frontend ---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jedy-front-route # Name of the route
  namespace: starwars
spec:
  parentRefs:
  - name: infra-gateway # Attaches this route to our 'infra-gateway'
    namespace: gateways # Specifies that the Gateway is in the 'gateways' namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: / # Intercepts all other traffic (root)
    backendRefs:
    - name: front-cluster-ip-service # Redirects to the Frontend Service
      port: 4321
